--- a/price-finder/public/index.html
+++ b/price-finder/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="theme-default">
     <div class="container">
         <h1>Smart Price Finder</h1>
         <p class="subtitle">Your personal PC-powered web scraper.</p>
@@ -98,14 +98,19 @@
                     <strong>Unique Visitors:</strong> <span id="unique-visitors">0</span> |
                     <strong>Users Online:</strong> <span id="users-online">0</span>
                 </p>
+                <p><strong>Top 5 Searched Terms:</strong></p>
+                <ol id="top-searches-list" class="status-list"></ol>
                 <p><strong>Recent Searches:</strong></p>
-                <ul id="search-history-list"><li>No searches recorded yet.</li></ul>
+                <ul id="search-history-list" class="status-list"></ul>
                 <div class="admin-controls">
                      <button id="clear-stats-button" class="danger">Clear All Stats & History</button>
                 </div>
             </div>
         </div>
     </div>
+    
+    <div id="theme-notification" class="hidden"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
