--- a/price-finder/public/index.html
+++ b/price-finder/public/index.html
@@ -6,7 +6,7 @@
     <title>Smart Price Finder</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="theme-default">
@@ -84,6 +84,9 @@
                     <button class="theme-button" data-theme="default">Default</button>
                     <button class="theme-button" data-theme="dark">Dark</button>
                     <button class="theme-button" data-theme="retro">Retro</button>
+                    <button class="theme-button" data-theme="sepia">Sepia</button>
+                    <button class="theme-button" data-theme="solarized">Solarized</button>
+                    <button class="theme-button" data-theme="synthwave">Synthwave</button>
                 </div>
                 <div class="admin-controls" style="margin-top: 10px;">
                     <button id="make-it-rain-button">Make It Rain 💰</button>
